--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,8 @@ install:
   # Replace dep1 dep2 ... with your dependencies
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pandas numpy xarray pytz netCDF4
   - source activate test-environment
-  - python setup.py install
+  - conda build conda.recipe
+  - conda install jaws --use-local
 
 script:
     - cd tests
