--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ install:
   # Replace dep1 dep2 ... with your dependencies
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pandas numpy xarray pytz netCDF4 conda-build
   - source activate test-environment
-  - conda build conda.recipe
+  #- conda build conda.recipe
   #- conda install -n test-environment --use-local jaws
 
 script:
