--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -18,7 +18,7 @@ requirements:
     - netcdf4
     - matplotlib
     - scipy
-    - pyngl
+    - requests
   run:
     - python
     - pandas
@@ -28,7 +28,7 @@ requirements:
     - netcdf4
     - matplotlib
     - scipy
-    - pyngl
+    - requests
 
 about:
   home: https://github.com/jaws/jaws
