--- a/.travis.yml
+++ b/.travis.yml
@@ -21,11 +21,12 @@ install:
   - hash -r
   - conda config --set always_yes yes --set changeps1 no
   - conda update -q conda
+  - conda config -add channels conda-forge
   # Useful for debugging any issues with conda
   - conda info -a
 
   # Replace dep1 dep2 ... with your dependencies
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION conda-forge pandas numpy xarray pytz netCDF4 conda-build scipy requests metpy
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pandas numpy xarray pytz netCDF4 conda-build scipy requests metpy
   - source activate test-environment
   #- conda build conda.recipe
   #- conda install -n test-environment --use-local jaws
