travis.yml: pip install metpy

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,8 @@ install:
   - conda info -a
 
   # Replace dep1 dep2 ... with your dependencies
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pandas numpy xarray pytz netCDF4 conda-build scipy requests metpy
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pandas numpy xarray pytz netCDF4 conda-build scipy requests
+  - pip install metpy
   - source activate test-environment
   #- conda build conda.recipe
   #- conda install -n test-environment --use-local jaws
