appveyor: Update test_script

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,10 +32,11 @@ install:
     - cmd: conda config --system --add pinned_packages defaults::conda
     - cmd: conda config --add channels conda-forge --force
     - cmd: conda config --add channels anaconda --force
-    - cmd: conda install netCDF4
+    # - cmd: conda install netCDF4
 
 # Skip .NET project specific build phase.
 build: off
 
 test_script:
-    - python test.py
+    # - python test.py
+    - ls
