--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,11 +32,10 @@ install:
     - cmd: conda config --system --add pinned_packages defaults::conda
     - cmd: conda config --add channels conda-forge --force
     - cmd: conda config --add channels anaconda --force
-    # - cmd: conda install netCDF4
+    - cmd: conda install netCDF4
 
 # Skip .NET project specific build phase.
 build: off
 
 test_script:
-    # - python test.py
-    - ls
+    - python tests/test.py
