include jaws/resources/nsidc/* in MANIFEST.in

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,3 +5,4 @@ include jaws/resources/imau/ant/*
 include jaws/resources/imau/grl/*
 include jaws/resources/promice/*
 include jaws/resources/scar/*
+include jaws/resources/nsidc/*
