--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,6 +31,8 @@ install:
     # Install conda-build.
     - cmd: conda install conda-build
 
+    - cmd: conda install libarchive
+
     - cmd: set PYTHONUNBUFFERED=1
   
     - cmd: conda info --all
