--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -20,6 +20,7 @@ requirements:
     - scipy
     - requests
     - metpy
+    - libarchive
   run:
     - python
     - pandas
@@ -31,6 +32,7 @@ requirements:
     - scipy
     - requests
     - metpy
+    - libarchive
 
 about:
   home: https://github.com/jaws/jaws
